- Added some instructions

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,8 +18,8 @@ set-option -g default-shell "/usr/bin/fish"
 bind tab send-keys "reset" C-m\; run-shell "sleep 0.1"\; clear-history
 
 # Try and make tmux not fuck up when a script outputs too much
-setw -g c0-change-trigger 10
-setw -g c0-change-interval 250
+#setw -g c0-change-trigger 10
+#setw -g c0-change-interval 250
 
 # not working
 source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
