- Added fixes for fish and ssh stuff (remembering login was broken)\n- Added syntax hilighting for glsl shader files\n- Added persistent undo :O

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,7 @@
 
+# try to fix ssh etc.
+set -g update-environment -r
+
 # Use vim keybindings by default i.e. / instead of ctrl+s to search
 set-window-option -g mode-keys vi
 
@@ -22,7 +25,7 @@ bind tab send-keys "reset" C-m\; run-shell "sleep 0.1"\; clear-history
 #setw -g c0-change-interval 250
 
 # not working
-source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+#source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 set-option -g default-terminal "screen-256color"
 
 # Quick window switching
