--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,10 +6,17 @@ set -g update-environment -r
 set-window-option -g mode-keys vi
 
 # Copy into clipboard
-bind C-c choose-buffer "run \"tmux save-buffer -b '%%' - | xsel -i -b\""
+#bind C-c choose-buffer "run \"tmux save-buffer -b '%%' - | xsel -i -b\""
 
 # Paste from clipboard
-bind C-v run "xsel -o -b | tmux load-buffer - && tmux paste-buffer"
+#bind C-v run "xsel -o -b | tmux load-buffer - && tmux paste-buffer"
+
+
+bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+
+bind -t vi-copy V begin-selection
+bind -t vi-copy v begin-selection
+
 
 # Large limit
 set -g history-limit 100000
