Updated instructions for neovim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,7 +32,7 @@ bind tab send-keys "reset" C-m\; run-shell "sleep 0.1"\; clear-history
 #setw -g c0-change-interval 250
 
 # not working
-#source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 set-option -g default-terminal "screen-256color"
 
 # Quick window switching
