Updated for Ubuntu 18.04

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,10 +12,11 @@ set-window-option -g mode-keys vi
 #bind C-v run "xsel -o -b | tmux load-buffer - && tmux paste-buffer"
 
 
-bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel\; run "tmux save -|xclip -sel clip >/dev/null 2>&1"
 
-bind -t vi-copy V begin-selection
-bind -t vi-copy v begin-selection
+bind -T copy-mode-vi V send-keys -X begin-selection
+bind -T copy-mode-vi C-v send-keys -X begin-selection\; send-keys -X rectangle-toggle
+bind -T copy-mode-vi v send-keys -X begin-selection
 
 
 # Large limit
@@ -32,10 +33,10 @@ bind tab send-keys "reset" C-m\; run-shell "sleep 0.1"\; clear-history
 #setw -g c0-change-interval 250
 
 # not working
-source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+source /usr/share/powerline/bindings/tmux/powerline.conf
 set-option -g default-terminal "screen-256color"
 
 # Quick window switching
-bind-key -n C-j previous-window
-bind-key -n C-k next-window
+bind -n C-j previous-window
+bind -n C-k next-window
 
