Added syntax and fixed tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,9 @@ set -g update-environment -r
 # Use vim keybindings by default i.e. / instead of ctrl+s to search
 set-window-option -g mode-keys vi
 
+# Make escape key not lag
+set -sg escape-time 0
+
 # Copy into clipboard
 #bind C-c choose-buffer "run \"tmux save-buffer -b '%%' - | xsel -i -b\""
 
