Added tmux restore

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,7 +23,7 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 
 
 # Large limit
-set -g history-limit 100000
+set -g history-limit 1000000
 
 # Set to use fish by default
 set-option -g default-shell "/usr/bin/fish"
@@ -43,3 +43,7 @@ set-option -g default-terminal "screen-256color"
 bind -n C-j previous-window
 bind -n C-k next-window
 
+# Set focus-events on (important for Neovim autoread)
+set -g focus-events on
+
+run-shell /home/ash/github/tmux-resurrect/resurrect.tmux
